# music-assistant-client

./: .envrc  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: .release-please-config.json  release-please.yml  release.yml  test.yml
music_assistant_client/: client.py  config.py  connection.py  constants.py  helpers.py  music.py  player_queues.py  players.py
scripts/: example.py  setup.sh
